tests/fail/constructor/missing_arguments.tox
class Foo {
  a:int,b:int;

  fn init(a:int, b:int) -> Foo {
    return Foo {a:a,b:b};
  }
}

fn main() {
  let foo = Foo.init(1); //error: Expected `2` args found `1`
}